<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jboss.integration-platform</groupId>
    <artifactId>jboss-integration-platform-parent</artifactId>
    <version>6.0.0-SNAPSHOT</version>
  </parent>

  <groupId>org.overlord.apiman</groupId>
  <artifactId>apiman</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>apiman</name>
  <url>http://www.jboss.org/overlord</url>
  <description>The Overlord API Management project</description>

  <organization>
    <name>JBoss, a division of Red Hat</name>
    <url>http://www.jboss.org</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.jboss.org/browse/APIMAN</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:Governance/apiman.git</connection>
    <developerConnection>scm:git:git@github.com:Governance/apiman.git</developerConnection>
    <url>scm:git:git@github.com:Governance/apiman.git</url>
  </scm>

  <developers>
    <developer>
      <name>Eric Wittmann</name>
      <id>EricWittmann</id>
      <email>eric.wittmann@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Tech Lead</role>
        <role>Developer</role>
      </roles>
      <timezone>-5</timezone>
    </developer>
    <developer>
      <name>Gary Brown</name>
      <id>objectiser</id>
      <email>gbrown@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>

    <!-- Distribution URLs -->
    <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
    <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>

    <!-- Plugin Versions -->
    <maven.surefire.report.plugin.version>2.16</maven.surefire.report.plugin.version>

    <!-- Dependency Versions (not found in parent) -->
    <overlord-commons.version>2.0.1-SNAPSHOT</overlord-commons.version>
    <picketlink.version>2.1.6.Final</picketlink.version>
    <jetty.version>8.1.9.v20130131</jetty.version>
    <undertow.version>1.0.1.Final</undertow.version>

    <!-- Dependency Overrides -->
    <version.org.jboss.errai>3.0-SNAPSHOT</version.org.jboss.errai>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Integration Platform Imports -->
      <dependency>
        <groupId>org.jboss.integration-platform</groupId>
        <artifactId>jboss-integration-platform-bom</artifactId>
        <version>6.0.0-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Use Errai 3.0 (temporary override) -->
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-common</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-cdi-jetty</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-ioc</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-cdi-client</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-javax-enterprise</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-weld-integration</artifactId>
        <version>${version.org.jboss.errai}</version>
        <exclusions>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-ui</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-navigation</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-data-binding</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-marshalling</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-bus</artifactId>
        <version>${version.org.jboss.errai}</version>
        <exclusions>
          <exclusion>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
          </exclusion>
          <exclusion>
            <groupId>javax.annotation</groupId>
            <artifactId>jsr250-api</artifactId>
          </exclusion>
          <exclusion>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai</groupId>
        <artifactId>errai-jboss-as-support</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>

      <!-- Overlord Commons -->
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-gwt</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-config</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-i18n</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-errai-fuse-support</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-osgi</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-osgi-weld</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-uiheader</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-services</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-auth</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>org.overlord</groupId>
        <artifactId>overlord-commons-auth-jetty8</artifactId>
        <version>${overlord-commons.version}</version>
      </dependency>

      <!-- PicketLink -->
      <dependency>
        <groupId>org.picketlink</groupId>
        <artifactId>picketlink-core</artifactId>
        <version>${picketlink.version}</version>
      </dependency>
      
      <!-- Undertow -->
      <dependency>
        <groupId>io.undertow</groupId>
        <artifactId>undertow-core</artifactId>
        <version>${undertow.version}</version>
      </dependency>
      <dependency>
        <groupId>io.undertow</groupId>
        <artifactId>undertow-servlet</artifactId>
        <version>${undertow.version}</version>
      </dependency>
      
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- This section defines the default plugin settings inherited by child projects. -->
    <pluginManagement>
      <plugins>
      </plugins>
    </pluginManagement>
    <plugins>
      <!-- Include the maven-compiler-plugin settings here so that Eclipse/m2e will properly import the projects. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <!-- Produce source jars during the 'verify' phase -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
          </includes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <argLine>-Xmx368m -XX:MaxPermSize=128m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}</directory>
              <includes>
                <include>www-test/**</include>
                <include>.gwt/**</include>
                <include>.errai/**</include>
                <include>src/main/webapp/.errai/**</include>
                <include>src/main/webapp/app/**</include>
                <include>src/main/webapp/WEB-INF/deploy/**</include>
                <include>src/main/webapp/WEB-INF/lib/**</include>
                <include>src/main/webapp/WEB-INF/classes/**</include>
                <include>**/gwt-unitCache/**</include>
                <include>**/*.JUnit/**</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${maven.surefire.report.plugin.version}</version>
      </plugin>
    </plugins>
  </reporting>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>jboss-releases-repository</id>
      <name>JBoss Releases Repository</name>
      <url>${jboss.releases.repo.url}</url>
    </repository>
    <snapshotRepository>
      <id>jboss-snapshots-repository</id>
      <name>JBoss Snapshots Repository</name>
      <url>${jboss.snapshots.repo.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <modules>
    <module>apiman-dt</module>
    <module>apiman-rt</module>
    <module>apiman-tools</module>
    <module>apiman-test</module>
  </modules>

</project>
